# airwindows-lv2

./: .build.yml  .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  NOTES.md  README.md  astyle.conf  astyle.sh  meson.build  meson_options.txt  validate.sh
.github/workflows/: build.yml  check-formatting.yml
Template/: Template.c  Template.ttl
cross/: linux-aarch64.txt  linux-armhf.txt  linux-i686.txt  macos-aarch64.txt  macos-arm64.txt  windows-amd64.txt  windows-i686.txt
src/: manifest.ttl.in
src/ADClip7/: ADClip7.c  ADClip7.ttl
src/ADClip8/: ADClip8.c  ADClip8.ttl
src/ADT/: ADT.c  ADT.ttl
src/Acceleration/: Acceleration.c  Acceleration.ttl
src/Acceleration2/: Acceleration2.c  Acceleration2.ttl
src/Air/: Air.c  Air.ttl
src/Air2/: Air2.c  Air2.ttl
src/Air3/: Air3.c  Air3.ttl
src/Air4/: Air4.c  Air4.ttl
src/BassAmp/: BassAmp.c  BassAmp.ttl
src/BassDrive/: BassDrive.c  BassDrive.ttl
src/BassKit/: BassKit.c  BassKit.ttl
src/Baxandall/: Baxandall.c  Baxandall.ttl
src/BigAmp/: BigAmp.c  BigAmp.ttl
src/BitShiftGain/: BitShiftGain.c  BitShiftGain.ttl
src/BitShiftPan/: BitShiftPan.c  BitShiftPan.ttl
src/BrightAmbience/: BrightAmbience.c  BrightAmbience.ttl
src/BrightAmbience2/: BrightAmbience2.c  BrightAmbience2.ttl
src/BrightAmbience3/: BrightAmbience3.c  BrightAmbience3.ttl
src/BussColors4/: BussColors4.c  BussColors4.ttl
src/Cabs/: Cabs.c  Cabs.ttl
src/Capacitor/: Capacitor.c  Capacitor.ttl
src/Capacitor2/: Capacitor2.c  Capacitor2.ttl
src/Channel8/: Channel8.c  Channel8.ttl
src/Channel9/: Channel9.c  Channel9.ttl
src/ClipOnly/: ClipOnly.c  ClipOnly.ttl
src/ClipOnly2/: ClipOnly2.c  ClipOnly2.ttl
src/ClipSoftly/: ClipSoftly.c  ClipSoftly.ttl
src/Compresaturator/: Compresaturator.c  Compresaturator.ttl
src/Console0Buss/: Console0Buss.c  Console0Buss.ttl
src/Console0Channel/: Console0Channel.c  Console0Channel.ttl
src/Console6Buss/: Console6Buss.c  Console6Buss.ttl
src/Console6Channel/: Console6Channel.c  Console6Channel.ttl
src/Console7Buss/: Console7Buss.c  Console7Buss.ttl
src/Console7Cascade/: Console7Cascade.c  Console7Cascade.ttl
src/Console7Channel/: Console7Channel.c  Console7Channel.ttl
src/Console7Crunch/: Console7Crunch.c  Console7Crunch.ttl
src/Console8BussHype/: Console8BussHype.c  Console8BussHype.ttl
src/Console8BussIn/: Console8BussIn.c  Console8BussIn.ttl
src/Console8BussOut/: Console8BussOut.c  Console8BussOut.ttl
src/Console8ChannelHype/: Console8ChannelHype.c  Console8ChannelHype.ttl
src/Console8ChannelIn/: Console8ChannelIn.c  Console8ChannelIn.ttl
src/Console8ChannelOut/: Console8ChannelOut.c  Console8ChannelOut.ttl
src/Console8LiteBuss/: Console8LiteBuss.c  Console8LiteBuss.ttl
src/Console8LiteChannel/: Console8LiteChannel.c  Console8LiteChannel.ttl
src/Console8SubHype/: Console8SubHype.c  Console8SubHype.ttl
src/Console8SubIn/: Console8SubIn.c  Console8SubIn.ttl
src/Console8SubOut/: Console8SubOut.c  Console8SubOut.ttl
src/ConsoleLABuss/: ConsoleLABuss.c  ConsoleLABuss.ttl
src/ConsoleLAChannel/: ConsoleLAChannel.c  ConsoleLAChannel.ttl
src/Creature/: Creature.c  Creature.ttl
src/CrunchyGrooveWear/: CrunchyGrooveWear.c  CrunchyGrooveWear.ttl
src/DCVoltage/: DCVoltage.c  DCVoltage.ttl
src/DeBess/: DeBess.c  DeBess.ttl
src/Desk/: Desk.c  Desk.ttl
src/Distance2/: Distance2.c  Distance2.ttl
src/Doublelay/: Doublelay.c  Doublelay.ttl
src/Drive/: Drive.c  Drive.ttl
src/DrumSlam/: DrumSlam.c  DrumSlam.ttl
src/Dyno/: Dyno.c  Dyno.ttl
src/EQ/: EQ.c  EQ.ttl
src/EdIsDim/: EdIsDim.c  EdIsDim.ttl
src/EverySlew/: EverySlew.c  EverySlew.ttl
src/EveryTrim/: EveryTrim.c  EveryTrim.ttl
src/Facet/: Facet.c  Facet.ttl
src/FinalClip/: FinalClip.c  FinalClip.ttl
src/FireAmp/: FireAmp.c  FireAmp.ttl
src/Flipity/: Flipity.c  Flipity.ttl
src/Focus/: Focus.c  Focus.ttl
src/Fracture/: Fracture.c  Fracture.ttl
src/Galactic/: Galactic.c  Galactic.ttl
src/GlitchShifter/: GlitchShifter.c  GlitchShifter.ttl
src/GoldenSlew/: GoldenSlew.c  GoldenSlew.ttl
src/Golem/: Golem.c  Golem.ttl
src/GrindAmp/: GrindAmp.c  GrindAmp.ttl
src/HermeTrim/: HermeTrim.c  HermeTrim.ttl
src/HighGlossDither/: HighGlossDither.c  HighGlossDither.ttl
src/Hull2/: Hull2.c  Hull2.ttl
src/Hypersoft/: Hypersoft.c  Hypersoft.ttl
src/Hypersonic/: Hypersonic.c  Hypersonic.ttl
src/Infinity/: Infinity.c  Infinity.ttl
src/Infinity2/: Infinity2.c  Infinity2.ttl
src/Inflamer/: Inflamer.c  Inflamer.ttl
src/Infrasonic/: Infrasonic.c  Infrasonic.ttl
src/Interstage/: Interstage.c  Interstage.ttl
src/IronOxideClassic2/: IronOxideClassic2.c  IronOxideClassic2.ttl
src/LRConvolve/: LRConvolve.c  LRConvolve.ttl
src/LeadAmp/: LeadAmp.c  LeadAmp.ttl
src/LeftoMono/: LeftoMono.c  LeftoMono.ttl
src/LilAmp/: LilAmp.c  LilAmp.ttl
src/Luxor/: Luxor.c  Luxor.ttl
src/MV/: MV.c  MV.ttl
src/Mackity/: Mackity.c  Mackity.ttl
src/Mastering/: Mastering.c  Mastering.ttl
src/MatrixVerb/: MatrixVerb.c  MatrixVerb.ttl
src/MidAmp/: MidAmp.c  MidAmp.ttl
src/MidSide/: MidSide.c  MidSide.ttl
src/MoNoam/: MoNoam.c  MoNoam.ttl
src/Mojo/: Mojo.c  Mojo.ttl
src/Monitoring/: Monitoring.c  Monitoring.ttl
src/Nikola/: Nikola.c  Nikola.ttl
src/Overheads/: Overheads.c  Overheads.ttl
src/PhaseNudge/: PhaseNudge.c  PhaseNudge.ttl
src/PitchNasty/: PitchNasty.c  PitchNasty.ttl
src/PlatinumSlew/: PlatinumSlew.c  PlatinumSlew.ttl
src/PocketVerbs/: PocketVerbs.c  PocketVerbs.ttl
src/Point/: Point.c  Point.ttl
src/Pop/: Pop.c  Pop.ttl
src/Pop2/: Pop2.c  Pop2.ttl
src/PowerSag/: PowerSag.c  PowerSag.ttl
src/PowerSag2/: PowerSag2.c  PowerSag2.ttl
src/Pressure5/: Pressure5.c  Pressure5.ttl
src/PurestConsole2Buss/: PurestConsole2Buss.c  PurestConsole2Buss.ttl
src/PurestConsole2Channel/: PurestConsole2Channel.c  PurestConsole2Channel.ttl
src/PurestConsole3Buss/: PurestConsole3Buss.c  PurestConsole3Buss.ttl
src/PurestConsole3Channel/: PurestConsole3Channel.c  PurestConsole3Channel.ttl
src/ResEQ/: ResEQ.c  (+1 more)
(+94 files in other folders)
